--- a/eventstyling.html
+++ b/eventstyling.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,40 +8,40 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Event Styling Eventstyling</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <meta name="msapplication-TileColor" content="#da532c">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
 </head>
 
 <body>
-   <main>
+    <main>
 
-       <button onclick="topFunction()" id="button" title="Go to top">⥣</button>
-
-
-       <section class="styling_events" data-container></section>
-       <template data-template>
-           <article class="stylingeventListview">
-               <h1 class="heading" data-title></h1>
-               <p class="description" data-text></p>
-           </article>
-       </template>
+        <button onclick="topFunction()" id="button" title="Go to top">⥣</button>
 
 
+        <section class="styling_events" data-container></section>
+        <template data-template>
+            <article class="stylingeventListview">
+                <h1 class="heading" data-title></h1>
+                <p class="description" data-text></p>
+            </article>
+        </template>
 
-       <section class="events_portfolio" data-container1></section>
-       <template data-template1>
-           <article class="portfolioListview">
-               <h1 class="heading_events" data-title1></h1>
-               <img src="" alt="">
-           </article>
-       </template>
 
-   </main>
+
+        <section class="events_portfolio" data-container1></section>
+        <template data-template1>
+            <article class="portfolioListview">
+                <h1 class="heading_events" data-title1></h1>
+                <img src="" alt="">
+            </article>
+        </template>
+
+    </main>
 
     <script>
         document.addEventListener("DOMContentLoaded", getJson);
@@ -54,27 +55,27 @@
 
         let eventTemplate = document.querySelector("[data-template1]");
         let eventContainer =
-        document.querySelector("[data-container1]");
+            document.querySelector("[data-container1]");
 
         //---------Hent Json------------
 
-        async function getJson(){
+        async function getJson() {
             let jsonData = await fetch("http://milleprintzlau.dk/2.semester/styleeditor_site/wordpress/wp-json/wp/v2/pages?slug=event-styling-pages");
             intro = await jsonData.json();
             visIntro();
             console.log(intro);
 
-                let jsonData1 = await fetch("http://milleprintzlau.dk/2.semester/styleeditor_site/wordpress/wp-json/wp/v2/event/?per_page=100")
-                allEvents = await jsonData1.json();
-                visEvents();
-                console.log(allEvents);
+            let jsonData1 = await fetch("http://milleprintzlau.dk/2.semester/styleeditor_site/wordpress/wp-json/wp/v2/event/?per_page=100")
+            allEvents = await jsonData1.json();
+            visEvents();
+            console.log(allEvents);
         }
 
         //-------functions--------------
 
-        function visIntro(){
+        function visIntro() {
             console.log(intro);
-            intro.forEach(intro=>{
+            intro.forEach(intro => {
                 let klon = introTemplate.cloneNode(true).content;
                 klon.querySelector("[data-title]").textContent = intro.title.rendered;
                 klon.querySelector("[data-text]").innerHTML = intro.content.rendered;
@@ -82,15 +83,15 @@
             })
         }
 
-        function visEvents(){
+        function visEvents() {
             console.log(allEvents);
             allEvents.forEach(events => {
                 let klon = eventTemplate.cloneNode(true).content;
                 klon.querySelector("[data-title1]").textContent = events.title.rendered;
                 klon.querySelector("img").src = events.acf.image;
-                  klon.querySelector("img").alt = events.acf.image;
+                klon.querySelector("img").alt = events.acf.image;
                 //single
-                klon.querySelector("img").addEventListener("click", ()=>{
+                klon.querySelector("img").addEventListener("click", () => {
                     window.location.href = "single_eventstyling.html?id=" + events.id;
                 })
                 //singleslut
@@ -100,22 +101,25 @@
 
         //----------til toppen knap-----------------
 
-        window.onscroll = function() {scrollFunction()};
+        window.onscroll = function() {
+            scrollFunction()
+        };
 
-function scrollFunction() {
-    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-        document.getElementById("button").style.display = "block";
-    } else {
-        document.getElementById("button").style.display = "none";
-    }
-}
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                document.getElementById("button").style.display = "block";
+            } else {
+                document.getElementById("button").style.display = "none";
+            }
+        }
 
-function topFunction() {
-    document.body.scrollTop = 0;
-    document.documentElement.scrollTop = 0;
-}
+        function topFunction() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
 
     </script>
 
 </body>
+
 </html>
