--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
     <title>Style Editor</title>
 
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <meta name="msapplication-TileColor" content="#da532c">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-
 </head>
 
 <body>
@@ -28,17 +27,17 @@
 
         <div class="slide fade">
 
-            <a href="eventstyling.html"> <img src="img/eventslide.png" alt=""></a>
+            <a href="eventstyling.html"> <img src="img/event-03.png" alt=""></a>
 
         </div>
         <div class="slide fade">
 
-            <a href="boligstyling.html"><img src="img/boligslide.png" alt=""></a>
+            <a href="boligstyling.html"><img src="img/bolig-01.png" alt=""></a>
 
         </div>
         <div class="slide fade">
 
-            <a href="webshop.html"> <img src="img/shopslide.png" alt=""></a>
+            <a href="webshop.html"> <img src="img/shop-02.png" alt=""></a>
 
         </div>
 
