--- a/kontakt.html
+++ b/kontakt.html
@@ -8,11 +8,11 @@
 
     <title>Style Editor Kontakt</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <meta name="msapplication-TileColor" content="#da532c">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
 
@@ -62,28 +62,28 @@
 
 </body>
 
-     <?php include "footer.html";?>
+<?php include "footer.html";?>
 
 
-    <script>
-        window.onscroll = function() {
-            scrollFunction()
-        };
+<script>
+    window.onscroll = function() {
+        scrollFunction()
+    };
 
-        function scrollFunction() {
-            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                document.getElementById("button").style.display = "block";
-            } else {
-                document.getElementById("button").style.display = "none";
-            }
+    function scrollFunction() {
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+            document.getElementById("button").style.display = "block";
+        } else {
+            document.getElementById("button").style.display = "none";
         }
+    }
 
-        function topFunction() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-        }
+    function topFunction() {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+    }
 
-    </script>
+</script>
 
 
 </html>
