--- a/single_boligstyling.html
+++ b/single_boligstyling.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="CSS/single_boligstyling.css" type="text/css">
     <title>Event Styling Bolig Styling</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <meta name="msapplication-TileColor" content="#da532c">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-
 
 </head>
 
@@ -25,77 +24,77 @@
 
         <section class="singleContainer">
             <article class="home">
-               <a href="boligstyling.html"><button class="tilbage">TILBAGE</button></a>
+                <a href="boligstyling.html"><button class="tilbage">TILBAGE</button></a>
                 <h2 class="data-navn"></h2>
                 <p class="data-langbeskrivelse"></p>
             </article>
         </section>
 
-<!--        Slideshow-->
+        <!--        Slideshow-->
 
         <div class="slideshow-container">
 
-        <div class="billeder_container">
+            <div class="billeder_container">
 
-<div class="mySlides fade">
-  <div class="numbertext">1 / 8</div>
-  <img class="image1" src="" alt="">
-</div>
+                <div class="mySlides fade">
+                    <div class="numbertext">1 / 8</div>
+                    <img class="image1" src="" alt="">
+                </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">2 / 8</div>
-  <img class="image2" src="" alt="">
-</div>
+                <div class="mySlides fade">
+                    <div class="numbertext">2 / 8</div>
+                    <img class="image2" src="" alt="">
+                </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">3 / 8</div>
-  <img class="image3" src="" alt="">
-</div>
+                <div class="mySlides fade">
+                    <div class="numbertext">3 / 8</div>
+                    <img class="image3" src="" alt="">
+                </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">4 / 8</div>
-  <img class="image4" src="" alt="">
-</div>
+                <div class="mySlides fade">
+                    <div class="numbertext">4 / 8</div>
+                    <img class="image4" src="" alt="">
+                </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">5 / 8</div>
-  <img class="image5" src="" alt="">
-</div>
+                <div class="mySlides fade">
+                    <div class="numbertext">5 / 8</div>
+                    <img class="image5" src="" alt="">
+                </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">6 / 8</div>
-  <img class="image6" src="" alt="">
-</div>
+                <div class="mySlides fade">
+                    <div class="numbertext">6 / 8</div>
+                    <img class="image6" src="" alt="">
+                </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">7 / 8</div>
-  <img class="image7" src="" alt="">
-</div>
+                <div class="mySlides fade">
+                    <div class="numbertext">7 / 8</div>
+                    <img class="image7" src="" alt="">
+                </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">8 / 8</div>
-  <img class="image8" src="" alt="">
-</div>
+                <div class="mySlides fade">
+                    <div class="numbertext">8 / 8</div>
+                    <img class="image8" src="" alt="">
+                </div>
 
 
 
-<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-<a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
 
-<br>
+            <br>
 
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-  <span class="dot" onclick="currentSlide(4)"></span>
-  <span class="dot" onclick="currentSlide(5)"></span>
-  <span class="dot" onclick="currentSlide(6)"></span>
-  <span class="dot" onclick="currentSlide(7)"></span>
-  <span class="dot" onclick="currentSlide(8)"></span>
-</div>
-    </div>
+            <div style="text-align:center">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+                <span class="dot" onclick="currentSlide(4)"></span>
+                <span class="dot" onclick="currentSlide(5)"></span>
+                <span class="dot" onclick="currentSlide(6)"></span>
+                <span class="dot" onclick="currentSlide(7)"></span>
+                <span class="dot" onclick="currentSlide(8)"></span>
+            </div>
+        </div>
 
     </main>
 
@@ -126,7 +125,7 @@
             //slideshow images
 
             dest.querySelector(".image1").src = home.acf.image1;
-             dest.querySelector(".image1").alt = home.acf.image1;
+            dest.querySelector(".image1").alt = home.acf.image1;
 
             dest.querySelector(".image2").src = home.acf.image2;
             dest.querySelector(".image2").alt = home.acf.image2;
@@ -155,51 +154,59 @@
         //--------slideshow---------
 
         var slideIndex = 1;
-showSlides(slideIndex);
+        showSlides(slideIndex);
 
-function plusSlides(n) {
-  showSlides(slideIndex += n);
-}
+        function plusSlides(n) {
+            showSlides(slideIndex += n);
+        }
 
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
+        function currentSlide(n) {
+            showSlides(slideIndex = n);
+        }
 
-function showSlides(n) {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
-  if (n > slides.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";
-  }
-  for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";
-  dots[slideIndex-1].className += " active";
-}
+        function showSlides(n) {
+            var i;
+            var slides = document.getElementsByClassName("mySlides");
+            var dots = document.getElementsByClassName("dot");
+            if (n > slides.length) {
+                slideIndex = 1
+            }
+            if (n < 1) {
+                slideIndex = slides.length
+            }
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+            slides[slideIndex - 1].style.display = "block";
+            dots[slideIndex - 1].className += " active";
+        }
 
         //----------til toppen knap------------
 
-        window.onscroll = function() {scrollFunction()};
+        window.onscroll = function() {
+            scrollFunction()
+        };
 
-function scrollFunction() {
-    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-        document.getElementById("button").style.display = "block";
-    } else {
-        document.getElementById("button").style.display = "none";
-    }
-}
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                document.getElementById("button").style.display = "block";
+            } else {
+                document.getElementById("button").style.display = "none";
+            }
+        }
 
-function topFunction() {
-    document.body.scrollTop = 0;
-    document.documentElement.scrollTop = 0;
-}
+        function topFunction() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
+
     </script>
 
 
 
 </body>
+
 </html>
