--- a/header.html
+++ b/header.html
@@ -31,7 +31,7 @@
 
                 </a>
 
-                <a href="index.html"><img class="nav_logo" src="img/logo_styleeditor.svg" alt="nav_logo"></a>
+                <a class="logo_desk" href="index.html"><img class="nav_logo" src="img/logo_styleeditor.svg" alt="nav_logo"></a>
 
                 <a href="om.php">
                     <li>OM STYLE EDITOR</li>
