--- a/header.html
+++ b/header.html
@@ -1,63 +1,62 @@
 
+<div class="burgermenu">
+    <a href="index.php"><img class="nav_burger_logo" src="img/logo_styleeditor.svg" alt="nav_logo"></a>
+    <button class="burger">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+    </button>
+</div>
+
+<header>
+    <!--Navigationsbaren på laptop-->
+    <nav>
+        <ul>
 
 
-       <div class="burgermenu">
-        <a href="index.html"><img class="nav_burger_logo" src="img/logo_styleeditor.svg" alt="nav_logo"></a>
-        <button class="burger">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
-        </button>
-    </div>
+            <div class="dropdown">
+                <li>PORTFOLIO <i class="fa fa-caret-down"></i>
+                </li>
 
-    <header>
-        <!--Navigationsbaren på laptop-->
-        <nav>
-            <ul>
-
-
-                    <div class="dropdown">
-     <li>PORTFOLIO <i class="fa fa-caret-down"></i>
-     </li>
-
-              <div class="dropdown-content">
-                <a href="eventstyling.php">Event Styling</a>
-                <a href="boligstyling.php">Bolig Styling</a>
-                  </div>
+                <div class="dropdown-content">
+                    <a href="eventstyling.html">Event Styling</a>
+                    <a href="boligstyling.html">Bolig Styling</a>
                 </div>
+            </div>
 
-                  <a href="webshop.php">
-                    <li>SHOP</li>
+            <a href="webshop.html">
+                <li>SHOP</li>
 
-                </a>
+            </a>
 
-                <a class="logo_desk" href="index.html"><img class="nav_logo" src="img/logo_styleeditor.svg" alt="nav_logo"></a>
+            <a class="logo_desk" href="index.php"><img class="nav_logo" src="img/logo_styleeditor.svg" alt="nav_logo"></a>
 
-                <a href="om.php">
-                    <li>OM STYLE EDITOR</li>
-                </a>
-                <a href="kontakt.php">
-                    <li>KONTAKT</li>
-                </a>
-            </ul>
-        </nav>
-    </header>
+            <a href="om.html">
+                <li>OM STYLE EDITOR</li>
+            </a>
+            <a href="kontakt.html">
+                <li>KONTAKT</li>
+            </a>
+        </ul>
+    </nav>
+</header>
 
-   <script>
-//Script til burgermenu
-function onLoad() {
+<script>
+    //Script til burgermenu
+    function onLoad() {
 
-    function toggleMenu() {
-        document.querySelector(".burger").classList.toggle("change");
-        document.querySelector("nav").classList.toggle("show");
+        function toggleMenu() {
+            document.querySelector(".burger").classList.toggle("change");
+            document.querySelector("nav").classList.toggle("show");
+        }
+        document.querySelector(".burger").addEventListener("click", toggleMenu);
+        document.querySelector("ul").addEventListener("click", toggleMenu);
+
     }
-    document.querySelector(".burger").addEventListener("click", toggleMenu);
-    document.querySelector("ul").addEventListener("click", toggleMenu);
 
-     }
+    //Vil først starte når DOM-indholdet er loaded
+    document.addEventListener("DOMContentLoaded", function(event) {
+        onLoad();
+    });
 
-       //Vil først starte når DOM-indholdet er loaded
-document.addEventListener("DOMContentLoaded", function (event) {
-    onLoad();
-});
 </script>
