--- a/header.html
+++ b/header.html
@@ -1,4 +1,6 @@
  <link href="CSS/header.css" rel="stylesheet">
+
+
 <div class="burgermenu">
     <a href="index.php"><img class="nav_burger_logo" src="img/logo_styleeditor.svg" alt="nav_logo"></a>
     <button class="burger">
@@ -24,6 +26,10 @@
                 </div>
             </div>
 
+             <a href="ekstraside.php">
+                <li>PORTFOLIO</li>
+
+            </a>
             <a href="webshop.php">
                 <li>SHOP</li>
 
