--- a/header.html
+++ b/header.html
@@ -26,10 +26,9 @@
                 </div>
             </div>
 
-             <a href="ekstraside.php">
-                <li>PORTFOLIO</li>
 
-            </a>
+
+
             <a href="webshop.php">
                 <li>SHOP</li>
 
@@ -40,6 +39,11 @@
             <a href="om.php">
                 <li>OM STYLE EDITOR</li>
             </a>
+
+
+            <a class="mobil_link" href="ekstraside.php"><li>PORTFOLIO</li> </a>
+
+
             <a href="kontakt.php">
                 <li>KONTAKT</li>
             </a>
