--- a/ekstraside.html
+++ b/ekstraside.html
@@ -1,16 +1,29 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/ekstraside.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Event Styling</title>
+</head>
 
-  <head>
-    <meta charset="UTF-8">
-    <title>Untitled Document</title>
-    <link rel="stylesheet" href="/css/main.css">
-  </head>
+<body>
+    <main>
 
-  <body>
+        <a href="eventstyling.php"><section class="styling_events" data-container>
+            <h1 class="heading">EVENT STYLING</h1>
+            <img src="event_portfolio.jpg" alt="event">
+        </section></a>
 
 
+        <a href="boligstyling.php"><section class="styling_events" data-container1>
+            <h1 class="heading">BOLIG STYLING</h1>
+            <img src="bolig_portfolio.jpg" alt="event">
+        </section></a>
 
-  </body>
+    </main>
 
+</body>
 </html>
+
