--- a/header.html
+++ b/header.html
@@ -1,72 +1,88 @@
- <link href="CSS/header.css" rel="stylesheet">
+  <link href="CSS/header.css" rel="stylesheet">
+
+       <div class="burgermenu">
+        <a href="index.html"><img class="nav_burger_logo" src="img/logo_styleeditor.svg" alt="nav_logo"></a>
+        <button class="burger">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </button>
+    </div>
+
+<header class="mobil">
+        <!--Navigationsbaren på laptop-->
+        <nav>
+            <ul>
+         <a href="ekstraside.php">
+                    <li>PORTFOLIO</li>
+
+                </a>
+
+                  <a href="webshop.php">
+                    <li>SHOP</li>
+
+                </a>
 
 
-<div class="burgermenu">
-    <a href="index.php"><img class="nav_burger_logo" src="img/logo_styleeditor.svg" alt="nav_logo"></a>
-    <button class="burger">
-        <div class="bar1"></div>
-        <div class="bar2"></div>
-        <div class="bar3"></div>
-    </button>
-</div>
-
-<header>
-    <!--Navigationsbaren på laptop-->
-    <nav>
-        <ul>
+                <a href="om.php">
+                    <li>OM STYLE EDITOR</li>
+                </a>
+                <a href="kontakt.php">
+                    <li>KONTAKT</li>
+                </a>
+            </ul>
+        </nav>
+    </header>
 
 
-            <div class="dropdown">
-                <li>PORTFOLIO <i class="fa fa-caret-down"></i>
-                </li>
+<header class="desktop">
+        <!--Navigationsbaren på laptop-->
+        <nav>
+            <ul>
 
-                <div class="dropdown-content">
-                    <a href="eventstyling.php">Event Styling</a>
-                    <a href="boligstyling.php">Bolig Styling</a>
+
+                    <div class="dropdown">
+     <li>PORTFOLIO <i class="fa fa-caret-down"></i>
+     </li>
+
+              <div class="dropdown-content">
+                <a href="eventstyling.php">Event Styling</a>
+                <a href="boligstyling.php">Bolig Styling</a>
+                  </div>
                 </div>
-            </div>
 
+                  <a href="webshop.php">
+                    <li>SHOP</li>
 
+                </a>
 
+                <a href="index.html"><img class="nav_logo" src="img/logo_styleeditor.svg" alt="nav_logo"></a>
 
-            <a href="webshop.php">
-                <li>SHOP</li>
+                <a href="om.php">
+                    <li>OM STYLE EDITOR</li>
+                </a>
+                <a href="kontakt.php">
+                    <li>KONTAKT</li>
+                </a>
+            </ul>
+        </nav>
+    </header>
 
-            </a>
+   <script>
+//Script til burgermenu
+function onLoad() {
 
-            <a class="logo_desk" href="index.php"><img class="nav_logo" src="img/logo_styleeditor.svg" alt="nav_logo"></a>
-
-            <a href="om.php">
-                <li>OM STYLE EDITOR</li>
-            </a>
-
-
-            <a class="mobil_link" href="ekstraside.php"><li>PORTFOLIO</li> </a>
-
-
-            <a href="kontakt.php">
-                <li>KONTAKT</li>
-            </a>
-        </ul>
-    </nav>
-</header>
-
-<script>
-    //Script til burgermenu
-    function onLoad() {
-
-        function toggleMenu() {
-            document.querySelector(".burger").classList.toggle("change");
-            document.querySelector("nav").classList.toggle("show");
-        }
-        document.querySelector(".burger").addEventListener("click", toggleMenu);
-        document.querySelector("ul").addEventListener("click", toggleMenu);
-
+    function toggleMenu() {
+        document.querySelector(".burger").classList.toggle("change");
+        document.querySelector("nav").classList.toggle("show");
     }
+    document.querySelector(".burger").addEventListener("click", toggleMenu);
+    document.querySelector("ul").addEventListener("click", toggleMenu);
 
-    //Vil først starte når DOM-indholdet er loaded
-    document.addEventListener("DOMContentLoaded", function(event) {
-        onLoad();
-    });
+     }
 
+       //Vil først starte når DOM-indholdet er loaded
+document.addEventListener("DOMContentLoaded", function (event) {
+    onLoad();
+});
 </script>
