--- a/header.html
+++ b/header.html
@@ -40,15 +40,16 @@
             <ul>
 
 
-                    <div class="dropdown">
-     <li>PORTFOLIO <i class="fa fa-caret-down"></i>
-     </li>
+                 <div class="dropdown">
+               <li>PORTFOLIO ↓ ∇ </li>
 
               <div class="dropdown-content">
-                <a href="eventstyling.php">Event Styling</a>
-                <a href="boligstyling.php">Bolig Styling</a>
-                  </div>
-                </div>
+    <a href="eventstyling.php"><li>Event Styling</li></a>
+     <a href="boligstyling.php"><li>Bolig Styling</li></a>
+  </div>
+</div>
+
+
 
                   <a href="webshop.php">
                     <li>SHOP</li>
@@ -56,6 +57,7 @@
                 </a>
 
                 <a href="index.html"><img class="nav_logo" src="img/logo_styleeditor.svg" alt="nav_logo"></a>
+
 
                 <a href="om.php">
                     <li>OM STYLE EDITOR</li>
