--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 
        <div class="burgermenu">
-        <a href="index.html"><img class="nav_burger_logo" src="img/logo_styleeditor.svg" alt="nav_logo"></a>
+        <a href="index.php"><img class="nav_burger_logo" src="img/logo_styleeditor.svg" alt="nav_logo"></a>
         <button class="burger">
             <div class="bar1"></div>
             <div class="bar2"></div>
@@ -56,7 +56,7 @@
 
                 </a>
 
-                <a href="index.html"><img class="nav_logo" src="img/logo_styleeditor.svg" alt="nav_logo"></a>
+                <a href="index.php"><img class="nav_logo" src="img/logo_styleeditor.svg" alt="nav_logo"></a>
 
 
                 <a href="om.php">
