--- a/webshop.html
+++ b/webshop.html
@@ -69,9 +69,9 @@
             <!--    sorteringsknapper/navigationen blandt vare-->
             <div class="column1">
                 <section id="sorteringsknapper">
-                    <h1>VÆLG KATAGORI</h1>
+                    <h1>VÆLG KATRGORI</h1>
                     <div class="knapper">
-                        <button class="menu_item" data_kategori="ALLE">Alle</button>
+                        <button class="menu_item" data_kategori="alle">ALLE</button>
                         <button class="menu_item" data_kategori="VINTAGE GLAS">GLAS</button>
                         <button class="menu_item" data_kategori="TALLERKENER">TALLERKNER</button>
                         <button class="menu_item" data_kategori="RODEBUNKEN">RODEBUNKE</button>
@@ -79,9 +79,7 @@
 
                     </div>
 
-                    <hr width="15%">
-                    <br>
-                    <br>
+
                     <p>Shoppen foregår over mail, det betyder at køb knappen henviser til Anettes Thyrsteds mail. Skriv til Anette hvis du gerne vil købe varen.</p>
                 </section>
 
