--- a/header.html
+++ b/header.html
@@ -1,4 +1,6 @@
-     <div class="burgermenu">
+
+
+         <div class="burgermenu">
         <a href="index.php"><img class="nav_burger_logo" src="img/logo_styleeditor-01.png" alt="nav_logo"></a>
         <button class="burger">
             <div class="bar1"></div>
@@ -6,6 +8,9 @@
             <div class="bar3"></div>
         </button>
     </div>
+
+
+
 <header class="mobil">
 
 
@@ -33,8 +38,11 @@
             </ul>
         </nav>
     </header>
+
+
+
 <header class="desktop">
-        <!--Navigationsbaren på laptop-->
+
         <nav>
             <ul>
 
@@ -68,3 +76,21 @@
         </nav>
     </header>
 
+   <script>
+//Script til burgermenu
+function onLoad() {
+
+    function toggleMenu() {
+        document.querySelector(".burger").classList.toggle("change");
+        document.querySelector("nav").classList.toggle("show");
+    }
+    document.querySelector(".burger").addEventListener("click", toggleMenu);
+    document.querySelector("ul").addEventListener("click", toggleMenu);
+
+     }
+
+       //Vil først starte når DOM-indholdet er loaded
+document.addEventListener("DOMContentLoaded", function (event) {
+    onLoad();
+});
+</script>
