sidste rettelse angående om

--- a/header.html
+++ b/header.html
@@ -1,7 +1,8 @@
+  <link href="CSS/header.css" rel="stylesheet">
 
 
-         <div class="burgermenu">
-        <a href="index.php"><img class="nav_burger_logo" src="img/logo_styleeditor-01.png" alt="nav_logo"></a>
+       <div class="burgermenu">
+        <a href="index.html"><img class="nav_burger_logo" src="img/logo_styleeditor-01.png" alt="nav_logo"></a>
         <button class="burger">
             <div class="bar1"></div>
             <div class="bar2"></div>
@@ -9,12 +10,7 @@
         </button>
     </div>
 
-
-
 <header class="mobil">
-
-
-
         <!--Navigationsbaren på laptop-->
         <nav>
             <ul>
@@ -40,15 +36,14 @@
     </header>
 
 
-
 <header class="desktop">
-
+        <!--Navigationsbaren på laptop-->
         <nav>
             <ul>
 
 
                  <div class="dropdown">
-               <li>PORTFOLIO ↓</li>
+               <li>PORTFOLIO ↓ </li>
 
               <div class="dropdown-content">
     <a href="eventstyling.php"><li>Event Styling</li></a>
@@ -79,16 +74,13 @@
    <script>
 //Script til burgermenu
 function onLoad() {
-
     function toggleMenu() {
         document.querySelector(".burger").classList.toggle("change");
         document.querySelector("nav").classList.toggle("show");
     }
     document.querySelector(".burger").addEventListener("click", toggleMenu);
     document.querySelector("ul").addEventListener("click", toggleMenu);
-
      }
-
        //Vil først starte når DOM-indholdet er loaded
 document.addEventListener("DOMContentLoaded", function (event) {
     onLoad();
