--- a/header.html
+++ b/header.html
@@ -1,8 +1,6 @@
-  <link href="CSS/header.css" rel="stylesheet">
-
 
        <div class="burgermenu">
-        <a href="index.html"><img class="nav_burger_logo" src="img/logo_styleeditor-01.png" alt="nav_logo"></a>
+        <a href="index.php"><img class="nav_burger_logo" src="img/logo.png" alt="nav_logo"></a>
         <button class="burger">
             <div class="bar1"></div>
             <div class="bar2"></div>
@@ -58,7 +56,7 @@
 
                 </a>
 
-                <a href="index.php"><img class="nav_logo" src="img/logo_styleeditor-01.png" alt="nav_logo"></a>
+                <a href="index.php"><img class="nav_logo" src="img/logo.png" alt="nav_logo"></a>
 
 
                 <a href="om.php">
