kob knap virker

--- a/footer.html
+++ b/footer.html
@@ -23,7 +23,7 @@
 <section id="desktop_indholdet">
 
 
-          <h3>Style Editor |  Anette Thyrsted   Telefon | 31 77 32 32 Email <a href="mailto:anette@styleeditor.dk?Subject=Hello%20again" target="_top">anette@styleeditor.dk</a> CVR | 39034085</h3>
+          <h3>Style Editor |  Anette Thyrsted  | Telefon | 31 77 32 32 |Email <a href="mailto:anette@styleeditor.dk?Subject=Hello%20again" target="_top">anette@styleeditor.dk</a> CVR | 39034085</h3>
 
 <a href="#" class="fa fa-linkedin"></a>
 <a href="#" class="fa fa-instagram"></a>
