--- a/webshop.html
+++ b/webshop.html
@@ -34,28 +34,40 @@
 
     <main>
 
+        <div class="alert">
+  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+  <p>Shoppen foregår over mail, det betyder at køb knappen henviser til Anettes Thyrsteds mail. Skriv til Anette hvis du gerne vil købe varen.</p>
+</div>
+
+
+
         <!--        til toppen knappen-->
         <button onclick="topFunction()" id="button" title="Go to top">⥣</button>
 
-        <!--       Section til indhold af modale vinduet, når man trykker på en vare-->
+
+
 
         <!--        modal vindue-->
 
         <section id="modal">
             <div id="modal_content">
                 <button class="modal_close">X</button>
-    <div class="desktop_modal">
+<div class="desktop_modal">
                 <h2 class="modal_navn"></h2>
                 <div class="modal_langbeskrivelse"></div>
                 <img class="modal_image" src="" alt="">
-        </div>
+ </div>
                 <div class="modal_pris"></div>
 
-    <a class="kob" href="mailto:anette@styleeditor.dk?Subject=Shopping &body=
-    Hej Style Editor,
-    jeg kunne godt tænke med at købe (x) antal af (navnet på prodtuktet)
 
-    - med venlig hilsen (deres navn)" target="_blank"><button class="kobet">KØB</button></a>
+
+
+    <a class="kob" href="mailto:anette@styleeditor.dk?Subject=webshop &body=
+    Hej Style Editor,%0D%0A%0D%0A
+                     %0D%0A%0D%0A
+    jeg kunne godt tænke med at købe (x) antal af (navnet på prodtuktet)%0D%0A%0D%0A
+                  %0D%0A%0D%0A
+     - med venlig hilsen (deres navn)"><button class="kobet">KØB</button></a>
 
 
             </div>
@@ -111,7 +123,10 @@
 
         </div>
 
-        <p>Shoppen foregår over mail, det betyder at køb knappen henviser til Anettes Thyrsteds mail. Skriv til Anette hvis du gerne vil købe varen.</p>
+
+
+
+
 
     </main>
 
